22.0.5/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2023-10-24 - 10:31:34 +0000
  labels:
    app.kubernetes.io/name: keycloak-operator
    app.kubernetes.io/version: 22.0.5
    app.kubernetes.io/managed-by: quarkus
  name: keycloak-operator
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: keycloak-operator
    app.kubernetes.io/version: 22.0.5
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: keycloak-operator
    app.kubernetes.io/version: 22.0.5
  name: keycloak-operator-db
spec:
  ports:
    - name: postgresql-db
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgresql-db
  type: ClusterIP
