22.0.5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-app-ing
  namespace: keycloak
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - keycloak.127.0.0.1.nip.io
    secretName: keycloak-tls-secret
  rules:
  - host: keycloak.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 8443
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 8443
